--- a/ProductHunt/ProductHunt/Base.lproj/Main.storyboard
+++ b/ProductHunt/ProductHunt/Base.lproj/Main.storyboard
@@ -16,9 +16,82 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K2V-ao-Eat" userLabel="Feed Table View">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="250" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K2V-ao-Eat" userLabel="Feed Table View">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="BxT-5t-jrr">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="250"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BxT-5t-jrr" id="41R-3h-kjh">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xng-Zo-IZe" userLabel="postCell">
+                                                    <rect key="frame" x="20" y="11" width="374" height="228"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="db3-ye-fZa">
+                                                            <rect key="frame" x="0.0" y="0.0" width="232" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="lGJ-ad-ROS">
+                                                            <rect key="frame" x="244" y="0.0" width="130" height="14.5"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comments: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kap-vq-6YL">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="75.5" height="14.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Votes: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V8j-Y3-kHd">
+                                                                    <rect key="frame" x="83.5" y="0.0" width="46.5" height="14.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tagline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9iX-Gt-yhw">
+                                                            <rect key="frame" x="0.0" y="213.5" width="374" height="14.5"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="14.5" id="g82-U7-d8f"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="Cgd-dE-kq5">
+                                                            <rect key="frame" x="8" y="20" width="358" height="185.5"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="lGJ-ad-ROS" firstAttribute="top" secondItem="xng-Zo-IZe" secondAttribute="top" id="0RM-a1-RUh"/>
+                                                        <constraint firstItem="Cgd-dE-kq5" firstAttribute="leading" secondItem="xng-Zo-IZe" secondAttribute="leading" constant="8" id="13O-Yb-nip"/>
+                                                        <constraint firstAttribute="bottom" secondItem="9iX-Gt-yhw" secondAttribute="bottom" id="1I0-Dg-unl"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Cgd-dE-kq5" secondAttribute="trailing" constant="8" id="Ihf-hC-yGr"/>
+                                                        <constraint firstItem="Cgd-dE-kq5" firstAttribute="top" secondItem="lGJ-ad-ROS" secondAttribute="bottom" constant="5.5" id="QaQ-13-ZM3"/>
+                                                        <constraint firstAttribute="trailing" secondItem="lGJ-ad-ROS" secondAttribute="trailing" id="SiY-24-5ff"/>
+                                                        <constraint firstItem="lGJ-ad-ROS" firstAttribute="leading" secondItem="db3-ye-fZa" secondAttribute="trailing" constant="12" id="Ssb-Zu-g7R"/>
+                                                        <constraint firstItem="9iX-Gt-yhw" firstAttribute="top" secondItem="Cgd-dE-kq5" secondAttribute="bottom" constant="8" id="YlG-4r-XEd"/>
+                                                        <constraint firstItem="9iX-Gt-yhw" firstAttribute="leading" secondItem="xng-Zo-IZe" secondAttribute="leading" id="hIs-71-ll9"/>
+                                                        <constraint firstItem="db3-ye-fZa" firstAttribute="top" secondItem="xng-Zo-IZe" secondAttribute="top" id="j57-cz-Y26"/>
+                                                        <constraint firstAttribute="trailing" secondItem="9iX-Gt-yhw" secondAttribute="trailing" id="siz-LZ-Xo9"/>
+                                                        <constraint firstItem="db3-ye-fZa" firstAttribute="leading" secondItem="xng-Zo-IZe" secondAttribute="leading" id="xub-1l-6JM"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="xng-Zo-IZe" secondAttribute="bottom" id="Mxg-wH-XkA"/>
+                                                <constraint firstItem="xng-Zo-IZe" firstAttribute="top" secondItem="41R-3h-kjh" secondAttribute="topMargin" id="Q5e-Fh-9oe"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="xng-Zo-IZe" secondAttribute="trailing" id="cpG-fm-pNJ"/>
+                                                <constraint firstItem="xng-Zo-IZe" firstAttribute="leading" secondItem="41R-3h-kjh" secondAttribute="leadingMargin" id="iBS-98-opo"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -59,6 +132,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="placeholder" width="350" height="160"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
