--- a/ProductHunt/ProductHunt/Base.lproj/Main.storyboard
+++ b/ProductHunt/ProductHunt/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="BxT-5t-jrr">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="BxT-5t-jrr" customClass="PostTableViewCell" customModule="ProductHunt" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="24.5" width="414" height="250"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BxT-5t-jrr" id="41R-3h-kjh">
@@ -90,6 +90,13 @@
                                                 <constraint firstItem="xng-Zo-IZe" firstAttribute="leading" secondItem="41R-3h-kjh" secondAttribute="leadingMargin" id="iBS-98-opo"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="commentsCountLabel" destination="kap-vq-6YL" id="Dxo-oN-kYl"/>
+                                            <outlet property="nameLabel" destination="db3-ye-fZa" id="R9Z-he-hWg"/>
+                                            <outlet property="previewImageView" destination="Cgd-dE-kq5" id="3aK-bZ-n4W"/>
+                                            <outlet property="taglineLabel" destination="9iX-Gt-yhw" id="C6j-cA-BjD"/>
+                                            <outlet property="votesCountLabel" destination="V8j-Y3-kHd" id="pnQ-fi-pJh"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
